Update README and HTML
Signed-off-by: Panagiotis Georgiadis <drpaneas@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,9 +8,37 @@
 
 <body>
     <h1>SMB3 Movement</h1>
+    <p>
+        This project is a simple example of how to use the EbitenEngine to program the physics of a platformer game
+        inspired by the movement of Super Mario Bros 3. Although the movement is not 100% identical, it has the very
+        same feeling of SMB3.
+    </p>
+    <p>
+        The hard work demystifying the movement physics of SMB3, was done by NES Hacker, who wrote the assembly NES
+        code. You can find his source code <a href="https://github.com/NesHacker/PlatformerMovement/">here</a>, and a
+        video explaining it as well <a href="https://www.youtube.com/watch?v=ZuKIUjw_tNU">here</a>.
+    </p>
+    <p>Please consider subscribing to NES Hacker, the guy is awesome :D</p>
+    <p>This project is an implementation written in Go programming language and uses EbitenEngine.</p>
+    <h2>How to play</h2>
+    <p>Keyboard: Z and X</p>
+    <p>Gamepad: A and B</p>
     <p>This demo is created using <a href="https://ebitengine.org/">EbitenEngine</a>.</p>
     <p>You can find the source code for this game on <a href="https://github.com/drpaneas/smb3-movement">GitHub</a>.</p>
     <iframe src="./wasm/main.html" width="256" height="240"></iframe>
+    <h2>Disclaimer</h2>
+    <p>This is a non-profit fan-game study for the movement mechanics out of passion for Nintendo's classic NES game,
+        Super Mario Bros. 3. This fan project is NOT affiliated with or endorsed by Nintendo in any way. I do NOT claim
+        any assets which are trademarked by Nintendo or their respective owners as my own, including but not limited to:
+        the Super Mario trademark and the artwork used in this project.</p>
+    <p>If you like Super Mario Bros 3, please consider supporting Nintendo and buying the original NES game.</p>
+    <h2>License</h2>
+    <p>The source code for this project is open source and licensed under the <a href="LICENSE">MIT license</a>.</p>
+    <p>
+        Please note that while the code is open source, the graphical assets used in this project are owned by Nintendo.
+        These assets are not covered by the project's MIT license and all rights to these assets belong to Nintendo.
+        This project is a non-profit fan creation and is not affiliated with or endorsed by Nintendo.
+    </p>
 </body>
 
 </html>
