--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         video explaining it as well <a href="https://www.youtube.com/watch?v=ZuKIUjw_tNU">here</a>.
     </p>
     <p>Please consider subscribing to NES Hacker, the guy is awesome :D</p>
-    <p>This project is an implementation written in Go programming language and uses EbitenEngine.</p>
-    <h2>How to play</h2>
-    <p>Keyboard: Z and X</p>
-    <p>Gamepad: A and B</p>
     <p>This demo is created using <a href="https://ebitengine.org/">EbitenEngine</a>.</p>
     <p>You can find the source code for this game on <a href="https://github.com/drpaneas/smb3-movement">GitHub</a>.</p>
+    <h2>How to play</h2>
+    <p>First click inside the game window, so the game receives input. Then use either Keyboard (Z and X buttons) or
+        your Gamepad (A and B buttons). Note: for gamepad, analog sticks are not supported, only the D-Pad.</p>
+    </p>
     <iframe src="./wasm/main.html" width="256" height="240"></iframe>
     <h2>Disclaimer</h2>
     <p>This is a non-profit fan-game study for the movement mechanics out of passion for Nintendo's classic NES game,
