--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>SMB3 Movement</h1>
     <p>
-        This project is a simple example of how to use the EbitenEngine to program the physics of a platformer game
+        This project is a simple example of how to use the Ebitengine to program the physics of a platformer game
         inspired by the movement of Super Mario Bros 3. Although the movement is not 100% identical, it has the very
         same feeling of SMB3.
     </p>
@@ -19,7 +19,7 @@
         video explaining it as well <a href="https://www.youtube.com/watch?v=ZuKIUjw_tNU">here</a>.
     </p>
     <p>Please consider subscribing to NES Hacker, the guy is awesome :D</p>
-    <p>This demo is created using <a href="https://ebitengine.org/">EbitenEngine</a>.</p>
+    <p>This demo is created using <a href="https://ebitengine.org/">Ebitengine</a>.</p>
     <p>You can find the source code for this game on <a href="https://github.com/drpaneas/smb3-movement">GitHub</a>.</p>
     <h2>How to play</h2>
     <p>First click inside the game window, so the game receives input. Then use either Keyboard (Z and X buttons) or
